--- a/HempPlantationsDatabase/Views/Consumers/Index.cshtml
+++ b/HempPlantationsDatabase/Views/Consumers/Index.cshtml
@@ -46,6 +46,7 @@
 
             <!-- Edit Button -->
             <a href="@Url.Action("Edit", "Consumers", new { id = item.ConsumerID })" class="btn btn-primary edit-button">Edit</a>
+            <a href="@Url.Action("Delete", "Consumers", new { id = item.ConsumerID })" class="btn btn-primary edit-button" style="margin-top: 5px;">Delete</a>
 
         </div>
     }
