--- a/HempPlantationsDatabase/Views/HempVarieties/Index.cshtml
+++ b/HempPlantationsDatabase/Views/HempVarieties/Index.cshtml
@@ -44,6 +44,7 @@
             <!-- Add other fields as needed -->
             <!-- Edit Button -->
             <a href="@Url.Action("Edit", "HempVarieties", new { id = item.VarietyID })" class="btn btn-primary edit-button">Edit</a>
+            <a href="@Url.Action("Delete", "HempVarieties", new { id = item.VarietyID })" class="btn btn-primary edit-button" style="margin-top: 5px;">Delete</a>
         </div>
     }
 </body>
