--- a/HempPlantationsDatabase/Views/Purchases/Index.cshtml
+++ b/HempPlantationsDatabase/Views/Purchases/Index.cshtml
@@ -46,6 +46,7 @@
             <!-- Add other fields as needed -->
             <!-- Edit Button -->
             <a href="@Url.Action("Edit", "Purchases", new { id = item.PurchaseID })" class="btn btn-primary edit-button">Edit</a>
+            <a href="@Url.Action("Delete", "Purchases", new { id = item.PurchaseID })" class="btn btn-primary edit-button" style="margin-top: 5px;">Delete</a>
         </div>
     }
 </body>
