--- a/HempPlantationsDatabase/Views/Tastings/Index.cshtml
+++ b/HempPlantationsDatabase/Views/Tastings/Index.cshtml
@@ -45,6 +45,7 @@
             <!-- Add other fields as needed -->
             <!-- Edit Button -->
             <a href="@Url.Action("Edit", "Tastings", new { id = item.TastingID })" class="btn btn-primary edit-button">Edit</a>
+            <a href="@Url.Action("Delete", "Tastings", new { id = item.TastingID })" class="btn btn-primary edit-button" style="margin-top: 5px;">Delete</a>
         </div>
     }
 </body>
